WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30947
REGRESSION (
r50218
-
r50262
): E*TRADE accounts page is missing content
https://bugs.webkit.org/show_bug.cgi?id=30947
Summary
REGRESSION (r50218-r50262): E*TRADE accounts page is missing content
Oliver Hunt
Reported
2009-10-29 23:19:42 PDT
* SUMMARY When the Accounts page on E*TRADE finishes loading, a placeholder animated GIF is displayed where the account info is supposed to be. * STEPS TO REPRODUCE 1. Log in to E*TRADE and choose to go to Accounts or go to <
https://us.etrade.com/e/t/accounts/accountscombo
>. * RESULTS The page loads, but it is stuck at the placeholder animated E*TRADE logo (even though it’s not loading any data anymore). <
rdar://7348833
>
Attachments
Patch v1
(3.08 KB, patch)
2009-10-29 23:26 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-10-29 23:26:09 PDT
Created
attachment 42176
[details]
Patch v1
Maciej Stachowiak
Comment 2
2009-10-29 23:28:21 PDT
Comment on
attachment 42176
[details]
Patch v1 r=me
Oliver Hunt
Comment 3
2009-10-30 00:14:40 PDT
Committed
r50320
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug